@@ -466,11 +466,11 @@ SUBROUTINE dprojdtau_k (spsi, alpha, ijkb0, ipol, ik, nb_s, nb_e, mykey, dproj)
    !                           wfatbeta(iwf,ih)*dbetapsi(ih,ibnd) 
    !
    IF ( mykey == 0 .AND. nh(nt) > 0 ) THEN
-      CALL ZGEMM('N','N',nwfcU, nb_e-nb_s+1, nh(nt), 1.0_dp,  &
-           wfatdbeta, nwfcU, betapsi(1,nb_s), nh(nt), 1.0_dp,&
+      CALL ZGEMM('N','N',nwfcU, nb_e-nb_s+1, nh(nt), (1.0_dp,0.0_dp), &
+           wfatdbeta, nwfcU, betapsi(1,nb_s), nh(nt),(1.0_dp,0.0_dp), &
            dproj(1,nb_s), nwfcU)
-      CALL ZGEMM('N','N',nwfcU,nb_e-nb_s+1, nh(nt), 1.0_dp,  &
-           wfatbeta, nwfcU, dbetapsi(1,nb_s), nh(nt), 1.0_dp,&
+      CALL ZGEMM('N','N',nwfcU,nb_e-nb_s+1, nh(nt), (1.0_dp,0.0_dp),  &
+           wfatbeta, nwfcU, dbetapsi(1,nb_s), nh(nt),(1.0_dp,0.0_dp), &
            dproj(1,nb_s), nwfcU)
    END IF
    ! end band parallelization - only dproj(1,nb_s:nb_e) are calculated
